--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
             },
             colors: {
               brand: {
-                DEFAULT: "#F59E0B",
-                dark: "#D97706",
-                light: "#FBBF24",
+                DEFAULT: "#ffee10",
+                dark: "#ffee10",
+                light: "#ffee10",
               },
               dark: {
                 950: "#050505", // Mais profundo
@@ -117,11 +117,18 @@
     <!-- ==========================================
          SEÇÃO 1 – HERO (VISUAL NOVO)
     ========================================== -->
-    <header class="relative min-h-screen flex items-start justify-center bg-hero pt-32 lg:pt-40 pb-16">
+    <header class="relative min-h-screen flex items-start justify-center bg-hero pt-32 lg:pt-55 pb-16">
 
       <div
         class="container mx-auto px-6 lg:px-12 max-w-6xl text-center relative z-10 reveal"
       >
+            <div class="flex justify-center mb-6">
+        <img
+          src="/assets/img/fotos perfil - OFIR.png"
+          alt="OFIR Consultoria Estratégica"
+          class="h-10 md:h-12 object-contain"
+        />
+      </div>
         <!-- Badge -->
         <div
           class="inline-flex items-center gap-2 px-4 py-1.5 rounded-full bg-black/60 backdrop-blur-md border border-white/10 mb-8 hover:border-brand/50 transition-colors cursor-default"
@@ -218,92 +225,213 @@
           <!-- CONJUNTO 1 DE LOGOS -->
           <div class="flex items-center gap-6 px-3">
             <!-- Logo Card 1 -->
-            <div
-              class="w-40 h-20 bg-dark-800 rounded-xl border border-dark-700/50 flex items-center justify-center grayscale opacity-60 hover:grayscale-0 hover:opacity-100 hover:bg-dark-700 hover:scale-105 transition-all duration-300 cursor-pointer shadow-lg"
-            >
-              <span class="text-sm font-bold text-gray-300">LOGO 1</span>
-            </div>
-            <!-- Logo Card 2 -->
-            <div
-              class="w-40 h-20 bg-dark-800 rounded-xl border border-dark-700/50 flex items-center justify-center grayscale opacity-60 hover:grayscale-0 hover:opacity-100 hover:bg-dark-700 hover:scale-105 transition-all duration-300 cursor-pointer shadow-lg"
-            >
-              <span class="text-sm font-bold text-gray-300">LOGO 2</span>
-            </div>
-            <!-- Logo Card 3 -->
-            <div
-              class="w-40 h-20 bg-dark-800 rounded-xl border border-dark-700/50 flex items-center justify-center grayscale opacity-60 hover:grayscale-0 hover:opacity-100 hover:bg-dark-700 hover:scale-105 transition-all duration-300 cursor-pointer shadow-lg"
-            >
-              <span class="text-sm font-bold text-gray-300">LOGO 3</span>
-            </div>
-            <!-- Logo Card 4 -->
-            <div
-              class="w-40 h-20 bg-dark-800 rounded-xl border border-dark-700/50 flex items-center justify-center grayscale opacity-60 hover:grayscale-0 hover:opacity-100 hover:bg-dark-700 hover:scale-105 transition-all duration-300 cursor-pointer shadow-lg"
-            >
-              <span class="text-sm font-bold text-gray-300">LOGO 4</span>
-            </div>
-            <!-- Logo Card 5 -->
-            <div
-              class="w-40 h-20 bg-dark-800 rounded-xl border border-dark-700/50 flex items-center justify-center grayscale opacity-60 hover:grayscale-0 hover:opacity-100 hover:bg-dark-700 hover:scale-105 transition-all duration-300 cursor-pointer shadow-lg"
-            >
-              <span class="text-sm font-bold text-gray-300">LOGO 5</span>
-            </div>
-            <!-- Logo Card 6 -->
-            <div
-              class="w-40 h-20 bg-dark-800 rounded-xl border border-dark-700/50 flex items-center justify-center grayscale opacity-60 hover:grayscale-0 hover:opacity-100 hover:bg-dark-700 hover:scale-105 transition-all duration-300 cursor-pointer shadow-lg"
-            >
-              <span class="text-sm font-bold text-gray-300">LOGO 6</span>
-            </div>
-            <!-- Logo Card 7 -->
-            <div
-              class="w-40 h-20 bg-dark-800 rounded-xl border border-dark-700/50 flex items-center justify-center grayscale opacity-60 hover:grayscale-0 hover:opacity-100 hover:bg-dark-700 hover:scale-105 transition-all duration-300 cursor-pointer shadow-lg"
-            >
-              <span class="text-sm font-bold text-gray-300">LOGO 7</span>
-            </div>
-          </div>
+<div
+  class="w-40 h-20 flex items-center justify-center grayscale opacity-60 hover:grayscale-0 hover:opacity-100 hover:scale-105 transition-all duration-300 cursor-pointer"
+>
+  <img
+    src="/assets/img/LOGO-ENCANTADO.png"
+    alt="Churrascaria Encantado"
+    class="max-h-12 w-auto object-contain"
+  />
+</div>
 
-          <!-- CONJUNTO 2 DE LOGOS (Cópia exata para o loop funcionar) -->
-          <div class="flex items-center gap-6 px-3">
-            <!-- Logo Card 1 -->
-            <div
-              class="w-40 h-20 bg-dark-800 rounded-xl border border-dark-700/50 flex items-center justify-center grayscale opacity-60 hover:grayscale-0 hover:opacity-100 hover:bg-dark-700 hover:scale-105 transition-all duration-300 cursor-pointer shadow-lg"
-            >
-              <span class="text-sm font-bold text-gray-300">LOGO 1</span>
-            </div>
             <!-- Logo Card 2 -->
-            <div
-              class="w-40 h-20 bg-dark-800 rounded-xl border border-dark-700/50 flex items-center justify-center grayscale opacity-60 hover:grayscale-0 hover:opacity-100 hover:bg-dark-700 hover:scale-105 transition-all duration-300 cursor-pointer shadow-lg"
-            >
-              <span class="text-sm font-bold text-gray-300">LOGO 2</span>
-            </div>
+<div
+  class="w-40 h-20 flex items-center justify-center grayscale opacity-60 hover:grayscale-0 hover:opacity-100 hover:scale-105 transition-all duration-300 cursor-pointer"
+>
+  <img
+    src="/assets/img/LOGO-MOLETO.png"
+    alt="Churrascaria Encantado"
+    class="max-h-12 w-auto object-contain"
+  />
+</div>
+
             <!-- Logo Card 3 -->
-            <div
-              class="w-40 h-20 bg-dark-800 rounded-xl border border-dark-700/50 flex items-center justify-center grayscale opacity-60 hover:grayscale-0 hover:opacity-100 hover:bg-dark-700 hover:scale-105 transition-all duration-300 cursor-pointer shadow-lg"
-            >
-              <span class="text-sm font-bold text-gray-300">LOGO 3</span>
-            </div>
+<div
+  class="w-40 h-20 flex items-center justify-center grayscale opacity-60 hover:grayscale-0 hover:opacity-100 hover:scale-105 transition-all duration-300 cursor-pointer"
+>
+  <img
+    src="/assets/img/LOGO-ORIGEM.png"
+    alt="Churrascaria Encantado"
+    class="max-h-12 w-auto object-contain"
+  />
+</div>
+
             <!-- Logo Card 4 -->
-            <div
-              class="w-40 h-20 bg-dark-800 rounded-xl border border-dark-700/50 flex items-center justify-center grayscale opacity-60 hover:grayscale-0 hover:opacity-100 hover:bg-dark-700 hover:scale-105 transition-all duration-300 cursor-pointer shadow-lg"
-            >
-              <span class="text-sm font-bold text-gray-300">LOGO 4</span>
-            </div>
-            <!-- Logo Card 5 -->
-            <div
-              class="w-40 h-20 bg-dark-800 rounded-xl border border-dark-700/50 flex items-center justify-center grayscale opacity-60 hover:grayscale-0 hover:opacity-100 hover:bg-dark-700 hover:scale-105 transition-all duration-300 cursor-pointer shadow-lg"
-            >
-              <span class="text-sm font-bold text-gray-300">LOGO 5</span>
-            </div>
-            <!-- Logo Card 6 -->
-            <div
-              class="w-40 h-20 bg-dark-800 rounded-xl border border-dark-700/50 flex items-center justify-center grayscale opacity-60 hover:grayscale-0 hover:opacity-100 hover:bg-dark-700 hover:scale-105 transition-all duration-300 cursor-pointer shadow-lg"
-            >
-              <span class="text-sm font-bold text-gray-300">LOGO 6</span>
-            </div>
-            <!-- Logo Card 7 -->
-            <div
-              class="w-40 h-20 bg-dark-800 rounded-xl border border-dark-700/50 flex items-center justify-center grayscale opacity-60 hover:grayscale-0 hover:opacity-100 hover:bg-dark-700 hover:scale-105 transition-all duration-300 cursor-pointer shadow-lg"
-            >
-              <span class="text-sm font-bold text-gray-300">LOGO 7</span>
+<div
+  class="w-40 h-20 flex items-center justify-center grayscale opacity-60 hover:grayscale-0 hover:opacity-100 hover:scale-105 transition-all duration-300 cursor-pointer"
+>
+  <img
+    src="/assets/img/LOGO-POLLIUS.png"
+    alt="Churrascaria Encantado"
+    class="max-h-12 w-auto object-contain"
+  />
+</div>
+<div
+  class="w-40 h-20 flex items-center justify-center grayscale opacity-60 hover:grayscale-0 hover:opacity-100 hover:scale-105 transition-all duration-300 cursor-pointer"
+>
+  <img
+    src="/assets/img/LOGO-ENCANTADO.png"
+    alt="Churrascaria Encantado"
+    class="max-h-12 w-auto object-contain"
+  />
+</div>
+
+            <!-- Logo Card 2 -->
+<div
+  class="w-40 h-20 flex items-center justify-center grayscale opacity-60 hover:grayscale-0 hover:opacity-100 hover:scale-105 transition-all duration-300 cursor-pointer"
+>
+  <img
+    src="/assets/img/LOGO-MOLETO.png"
+    alt="Churrascaria Encantado"
+    class="max-h-12 w-auto object-contain"
+  />
+</div>
+
+            <!-- Logo Card 3 -->
+<div
+  class="w-40 h-20 flex items-center justify-center grayscale opacity-60 hover:grayscale-0 hover:opacity-100 hover:scale-105 transition-all duration-300 cursor-pointer"
+>
+  <img
+    src="/assets/img/LOGO-ORIGEM.png"
+    alt="Churrascaria Encantado"
+    class="max-h-12 w-auto object-contain"
+  />
+</div>
+
+            <!-- Logo Card 4 -->
+<div
+  class="w-40 h-20 flex items-center justify-center grayscale opacity-60 hover:grayscale-0 hover:opacity-100 hover:scale-105 transition-all duration-300 cursor-pointer"
+>
+  <img
+    src="/assets/img/LOGO-POLLIUS.png"
+    alt="Churrascaria Encantado"
+    class="max-h-12 w-auto object-contain"
+  />
+</div><div
+  class="w-40 h-20 flex items-center justify-center grayscale opacity-60 hover:grayscale-0 hover:opacity-100 hover:scale-105 transition-all duration-300 cursor-pointer"
+>
+  <img
+    src="/assets/img/LOGO-ENCANTADO.png"
+    alt="Churrascaria Encantado"
+    class="max-h-12 w-auto object-contain"
+  />
+</div>
+
+            <!-- Logo Card 2 -->
+<div
+  class="w-40 h-20 flex items-center justify-center grayscale opacity-60 hover:grayscale-0 hover:opacity-100 hover:scale-105 transition-all duration-300 cursor-pointer"
+>
+  <img
+    src="/assets/img/LOGO-MOLETO.png"
+    alt="Churrascaria Encantado"
+    class="max-h-12 w-auto object-contain"
+  />
+</div>
+
+            <!-- Logo Card 3 -->
+<div
+  class="w-40 h-20 flex items-center justify-center grayscale opacity-60 hover:grayscale-0 hover:opacity-100 hover:scale-105 transition-all duration-300 cursor-pointer"
+>
+  <img
+    src="/assets/img/LOGO-ORIGEM.png"
+    alt="Churrascaria Encantado"
+    class="max-h-12 w-auto object-contain"
+  />
+</div>
+
+            <!-- Logo Card 4 -->
+<div
+  class="w-40 h-20 flex items-center justify-center grayscale opacity-60 hover:grayscale-0 hover:opacity-100 hover:scale-105 transition-all duration-300 cursor-pointer"
+>
+  <img
+    src="/assets/img/LOGO-POLLIUS.png"
+    alt="Churrascaria Encantado"
+    class="max-h-12 w-auto object-contain"
+  />
+</div><div
+  class="w-40 h-20 flex items-center justify-center grayscale opacity-60 hover:grayscale-0 hover:opacity-100 hover:scale-105 transition-all duration-300 cursor-pointer"
+>
+  <img
+    src="/assets/img/LOGO-ENCANTADO.png"
+    alt="Churrascaria Encantado"
+    class="max-h-12 w-auto object-contain"
+  />
+</div>
+
+            <!-- Logo Card 2 -->
+<div
+  class="w-40 h-20 flex items-center justify-center grayscale opacity-60 hover:grayscale-0 hover:opacity-100 hover:scale-105 transition-all duration-300 cursor-pointer"
+>
+  <img
+    src="/assets/img/LOGO-MOLETO.png"
+    alt="Churrascaria Encantado"
+    class="max-h-12 w-auto object-contain"
+  />
+</div>
+
+            <!-- Logo Card 3 -->
+<div
+  class="w-40 h-20 flex items-center justify-center grayscale opacity-60 hover:grayscale-0 hover:opacity-100 hover:scale-105 transition-all duration-300 cursor-pointer"
+>
+  <img
+    src="/assets/img/LOGO-ORIGEM.png"
+    alt="Churrascaria Encantado"
+    class="max-h-12 w-auto object-contain"
+  />
+</div>
+
+            <!-- Logo Card 4 -->
+<div
+  class="w-40 h-20 flex items-center justify-center grayscale opacity-60 hover:grayscale-0 hover:opacity-100 hover:scale-105 transition-all duration-300 cursor-pointer"
+>
+  <img
+    src="/assets/img/LOGO-POLLIUS.png"
+    alt="Churrascaria Encantado"
+    class="max-h-12 w-auto object-contain"
+  />
+</div><div
+  class="w-40 h-20 flex items-center justify-center grayscale opacity-60 hover:grayscale-0 hover:opacity-100 hover:scale-105 transition-all duration-300 cursor-pointer"
+>
+  <img
+    src="/assets/img/LOGO-ENCANTADO.png"
+    alt="Churrascaria Encantado"
+    class="max-h-12 w-auto object-contain"
+  />
+</div>
+
+            <!-- Logo Card 2 -->
+<div
+  class="w-40 h-20 flex items-center justify-center grayscale opacity-60 hover:grayscale-0 hover:opacity-100 hover:scale-105 transition-all duration-300 cursor-pointer"
+>
+  <img
+    src="/assets/img/LOGO-MOLETO.png"
+    alt="Churrascaria Encantado"
+    class="max-h-12 w-auto object-contain"
+  />
+</div>
+
+            <!-- Logo Card 3 -->
+<div
+  class="w-40 h-20 flex items-center justify-center grayscale opacity-60 hover:grayscale-0 hover:opacity-100 hover:scale-105 transition-all duration-300 cursor-pointer"
+>
+  <img
+    src="/assets/img/LOGO-ORIGEM.png"
+    alt="Churrascaria Encantado"
+    class="max-h-12 w-auto object-contain"
+  />
+</div>
+
+            <!-- Logo Card 4 -->
+<div
+  class="w-40 h-20 flex items-center justify-center grayscale opacity-60 hover:grayscale-0 hover:opacity-100 hover:scale-105 transition-all duration-300 cursor-pointer"
+>
+  <img
+    src="/assets/img/LOGO-POLLIUS.png"
+    alt="Churrascaria Encantado"
+    class="max-h-12 w-auto object-contain"
+  />
+</div>
             </div>
           </div>
         </div>
