--- a/index.html
+++ b/index.html
@@ -790,38 +790,6 @@
       </div>
     </section>
 
-    <!-- ==========================================
-         NOVA SEÇÃO VISUAL: MOSAICO
-    ========================================== -->
-    <div
-      class="w-full bg-dark-950 overflow-hidden py-10 opacity-60 hover:opacity-100 transition-opacity duration-700"
-    >
-      <div class="container mx-auto px-4">
-        <!-- Removi as classes 'mt-8' das imagens 2 e 4 para alinhar tudo -->
-        <div class="grid grid-cols-2 md:grid-cols-4 gap-2 h-48 md:h-64">
-          <img
-            src="https://images.unsplash.com/photo-1559339352-11d035aa65de?auto=format&fit=crop&q=80&w=800"
-            class="w-full h-full object-cover rounded-lg transform hover:scale-105 transition-transform duration-500 cursor-pointer"
-            alt="Prato"
-          />
-          <img
-            src="https://images.unsplash.com/photo-1514362545857-3bc16c4c7d1b?auto=format&fit=crop&q=80&w=800"
-            class="w-full h-full object-cover rounded-lg transform hover:scale-105 transition-transform duration-500 cursor-pointer"
-            alt="Drinks"
-          />
-          <img
-            src="https://images.unsplash.com/photo-1554118811-1e0d58224f24?auto=format&fit=crop&q=80&w=800"
-            class="w-full h-full object-cover rounded-lg transform hover:scale-105 transition-transform duration-500 cursor-pointer"
-            alt="Ambiente"
-          />
-          <img
-            src="https://images.unsplash.com/photo-1600891964599-f61ba0e24092?auto=format&fit=crop&q=80&w=800"
-            class="w-full h-full object-cover rounded-lg transform hover:scale-105 transition-transform duration-500 cursor-pointer"
-            alt="Cozinha"
-          />
-        </div>
-      </div>
-    </div>
 
     <!-- ==========================================
          SEÇÃO 5 – A RECEITA OFIR (TIMELINE)
@@ -999,7 +967,7 @@
 
     <!-- ==========================================
          SEÇÃO 6 – VÍDEO (IMPACTO VISUAL)
-    ========================================== -->
+    ========================================== 
 <section class="py-20 bg-dark-950 border-t border-dark-800">
   <div class="container mx-auto px-6 lg:px-12 max-w-5xl text-center">
     <h2 class="text-3xl font-bold mb-2">Assista à receita em ação</h2>
@@ -1009,28 +977,28 @@
       Uma conversa franca sobre o que realmente muda quando você para de improvisar e passa a tratar seu restaurante como empresa.
     </p>
 
-    <!-- WRAPPER DO VÍDEO -->
+
     <div
       id="OFIR-video-wrapper"
       class="relative w-full aspect-video rounded-2xl overflow-hidden shadow-2xl border border-dark-700"
     >
-      <!-- THUMB CUSTOM (ANTES DO CLIQUE) -->
+       THUMB CUSTOM (ANTES DO CLIQUE) 
       <button
         id="OFIR-video-thumb"
         type="button"
         class="relative w-full h-full group"
       >
-        <!-- Imagem de fundo: thumbnail do próprio vídeo -->
+         Imagem de fundo: thumbnail do próprio vídeo 
         <img
           src="https://img.youtube.com/vi/bpOSxM0rNPM/hqdefault.jpg"
           alt="Vídeo OFIR"
           class="absolute inset-0 w-full h-full object-cover opacity-70 group-hover:opacity-50 group-hover:scale-105 transition-all duration-700"
         >
 
-        <!-- Overlay escuro -->
+        Overlay escuro 
         <div class="absolute inset-0 bg-black/40 group-hover:bg-black/50 transition-colors duration-300"></div>
 
-        <!-- Botão play + texto -->
+         Botão play + texto 
         <div class="absolute inset-0 flex flex-col items-center justify-center gap-4">
           <div class="w-20 h-20 bg-brand/90 rounded-full flex items-center justify-center shadow-[0_0_30px_rgba(245,158,11,0.5)] group-hover:scale-110 transition-transform duration-300">
             <svg class="w-8 h-8 text-black ml-1" fill="currentColor" viewBox="0 0 24 24">
@@ -1045,7 +1013,7 @@
     </div>
   </div>
 </section>
-
+-->
 
     <!-- ==========================================
          SEÇÃO 7 – PARA QUEM É
