--- a/index.html
+++ b/index.html
@@ -1018,7 +1018,7 @@
     <section class="py-20 bg-dark-900">
       <div class="container mx-auto px-6 lg:px-12 max-w-6xl">
         <div class="text-center mb-16 reveal">
-          <h2 class="text-3xl font-bold mb-4">Para quem é essa receita</h2>
+          <h2 class="text-3xl font-bold mb-4">Para quem é essa consultoria</h2>
           <p class="text-gray-400">
             A OFIR é para quem leva o negócio de alimentação a sério.
           </p>
