--- a/index.html
+++ b/index.html
@@ -113,6 +113,24 @@
       }
     </style>
   </head>
+  <a
+  href="#agendar"
+  class="fixed bottom-6 right-6 z-50 
+         bg-brand text-black font-semibold 
+         px-5 py-3 rounded-full 
+         shadow-[0_0_25px_rgba(255,238,16,0.5)]
+         flex items-center gap-2
+         hover:scale-105 hover:bg-brand/90 
+         transition-transform transition-colors duration-200"
+>
+  <!-- Ícone opcional -->
+  <svg class="w-5 h-5" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+      d="M9 5l7 7-7 7" />
+  </svg>
+
+  <span>Agendar diagnóstico</span>
+</a>
   <body class="overflow-x-hidden">
     <!-- ==========================================
          SEÇÃO 1 – HERO (VISUAL NOVO)
