--- a/index.html
+++ b/index.html
@@ -463,7 +463,7 @@
       <div class="container mx-auto px-6 lg:px-12 max-w-7xl">
         <div class="text-center mb-16 reveal">
           <h2 class="text-3xl lg:text-4xl font-bold mb-4">
-            Alguns exemplos de negócios de alimentação que destravaram
+            Negócios de alimentação que destravaram
             crescimento.
           </h2>
         </div>
