style(hero image)

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
          SEÇÃO 1 – HERO (VISUAL NOVO)
     ========================================== -->
     <header
-      class="relative min-h-screen flex items-start justify-center bg-hero pt-32 lg:pt-55 pb-16"
+      class="relative min-h-screen flex items-start justify-center bg-hero pt-32 lg:pt-55 "
     >
       <div
         class="container mx-auto px-6 lg:px-12 max-w-6xl text-center relative z-10 reveal"
@@ -146,15 +146,14 @@
           />
         </div>
         <!-- Badge -->
-        <div
-          class="inline-flex items-center gap-2 px-4 py-1.5 rounded-full bg-black/60 backdrop-blur-md border border-white/10 mb-8 hover:border-brand/50 transition-colors cursor-default"
-        >
-          <span class="w-2 h-2 rounded-full bg-brand animate-pulse"></span>
-          <span
-            class="text-xs font-medium text-gray-200 uppercase tracking-wide"
-            >Consultoria Especializada</span
-          >
-        </div>
+<div
+  class="inline-flex items-center gap-2 px-3 py-1 rounded-full bg-white/5 backdrop-blur-sm mb-8"
+>
+  <span class="w-2 h-2 rounded-full bg-brand animate-pulse"></span>
+  <span
+    class="text-xs font-medium text-gray-200 uppercase tracking-wide"
+  >Consultoria Especializada</span>
+</div>
 
         <h1
           class="text-4xl lg:text-7xl font-bold tracking-tight mb-8 leading-tight drop-shadow-lg"
