--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
          SEÇÃO 1 – HERO (VISUAL NOVO)
     ========================================== -->
     <header
-      class="relative min-h-screen flex items-start justify-center bg-hero pt-32 lg:pt-55 "
+      class="relative min-h-screen flex items-start justify-center bg-hero pt-32 lg:pt-55"
     >
       <div
         class="container mx-auto px-6 lg:px-12 max-w-6xl text-center relative z-10 reveal"
@@ -146,14 +146,15 @@
           />
         </div>
         <!-- Badge -->
-<div
-  class="inline-flex items-center gap-2 px-3 py-1 rounded-full bg-white/5 backdrop-blur-sm mb-8"
->
-  <span class="w-2 h-2 rounded-full bg-brand animate-pulse"></span>
-  <span
-    class="text-xs font-medium text-gray-200 uppercase tracking-wide"
-  >Consultoria Especializada</span>
-</div>
+        <div
+          class="inline-flex items-center gap-2 px-3 py-1 rounded-full bg-white/5 backdrop-blur-sm mb-8"
+        >
+          <span class="w-2 h-2 rounded-full bg-brand animate-pulse"></span>
+          <span
+            class="text-xs font-medium text-gray-200 uppercase tracking-wide"
+            >Consultoria Especializada</span
+          >
+        </div>
 
         <h1
           class="text-4xl lg:text-7xl font-bold tracking-tight mb-8 leading-tight drop-shadow-lg"
@@ -241,7 +242,7 @@
           <div class="flex items-center gap-6 px-3">
             <!-- Logo Card 1 -->
             <div
-              class="w-40 h-20 flex items-center justify-center grayscale opacity-60 hover:grayscale-0 hover:opacity-100 hover:scale-105 transition-all duration-300 cursor-pointer"
+              class="w-40 h-20 flex items-center justify-center grayscale opacity-60 hover:grayscale-0 hover:opacity-100 hover:scale-105 transition-all duration-300 cursor-pointer bg-black backdrop-blur-sm"
             >
               <img
                 src="/assets/img/LOGO-ENCANTADO.png"
@@ -252,7 +253,7 @@
 
             <!-- Logo Card 2 -->
             <div
-              class="w-40 h-20 flex items-center justify-center grayscale opacity-60 hover:grayscale-0 hover:opacity-100 hover:scale-105 transition-all duration-300 cursor-pointer"
+              class="w-40 h-20 flex items-center justify-center grayscale opacity-60 hover:grayscale-0 hover:opacity-100 hover:scale-105 transition-all duration-300 cursor-pointer bg-black backdrop-blur-sm"
             >
               <img
                 src="/assets/img/LOGO-MOLETO.png"
@@ -263,7 +264,7 @@
 
             <!-- Logo Card 3 -->
             <div
-              class="w-40 h-20 flex items-center justify-center grayscale opacity-60 hover:grayscale-0 hover:opacity-100 hover:scale-105 transition-all duration-300 cursor-pointer"
+              class="w-40 h-20 flex items-center justify-center grayscale opacity-60 hover:grayscale-0 hover:opacity-100 hover:scale-105 transition-all duration-300 cursor-pointer bg-black backdrop-blur-sm"
             >
               <img
                 src="/assets/img/LOGO-ORIGEM.png"
@@ -274,7 +275,7 @@
 
             <!-- Logo Card 4 -->
             <div
-              class="w-40 h-20 flex items-center justify-center grayscale opacity-60 hover:grayscale-0 hover:opacity-100 hover:scale-105 transition-all duration-300 cursor-pointer"
+              class="w-40 h-20 flex items-center justify-center grayscale opacity-60 hover:grayscale-0 hover:opacity-100 hover:scale-105 transition-all duration-300 cursor-pointer bg-black backdrop-blur-sm"
             >
               <img
                 src="/assets/img/LOGO-POLLIUS.png"
@@ -283,7 +284,7 @@
               />
             </div>
             <div
-              class="w-40 h-20 flex items-center justify-center grayscale opacity-60 hover:grayscale-0 hover:opacity-100 hover:scale-105 transition-all duration-300 cursor-pointer"
+              class="w-40 h-20 flex items-center justify-center grayscale opacity-60 hover:grayscale-0 hover:opacity-100 hover:scale-105 transition-all duration-300 cursor-pointer bg-black backdrop-blur-sm"
             >
               <img
                 src="/assets/img/LOGO-ENCANTADO.png"
@@ -294,7 +295,7 @@
 
             <!-- Logo Card 2 -->
             <div
-              class="w-40 h-20 flex items-center justify-center grayscale opacity-60 hover:grayscale-0 hover:opacity-100 hover:scale-105 transition-all duration-300 cursor-pointer"
+              class="w-40 h-20 flex items-center justify-center grayscale opacity-60 hover:grayscale-0 hover:opacity-100 hover:scale-105 transition-all duration-300 cursor-pointer bg-black backdrop-blur-sm"
             >
               <img
                 src="/assets/img/LOGO-MOLETO.png"
@@ -305,7 +306,7 @@
 
             <!-- Logo Card 3 -->
             <div
-              class="w-40 h-20 flex items-center justify-center grayscale opacity-60 hover:grayscale-0 hover:opacity-100 hover:scale-105 transition-all duration-300 cursor-pointer"
+              class="w-40 h-20 flex items-center justify-center grayscale opacity-60 hover:grayscale-0 hover:opacity-100 hover:scale-105 transition-all duration-300 cursor-pointer bg-black backdrop-blur-sm"
             >
               <img
                 src="/assets/img/LOGO-ORIGEM.png"
@@ -316,7 +317,7 @@
 
             <!-- Logo Card 4 -->
             <div
-              class="w-40 h-20 flex items-center justify-center grayscale opacity-60 hover:grayscale-0 hover:opacity-100 hover:scale-105 transition-all duration-300 cursor-pointer"
+              class="w-40 h-20 flex items-center justify-center grayscale opacity-60 hover:grayscale-0 hover:opacity-100 hover:scale-105 transition-all duration-300 cursor-pointer bg-black backdrop-blur-sm"
             >
               <img
                 src="/assets/img/LOGO-POLLIUS.png"
@@ -325,7 +326,7 @@
               />
             </div>
             <div
-              class="w-40 h-20 flex items-center justify-center grayscale opacity-60 hover:grayscale-0 hover:opacity-100 hover:scale-105 transition-all duration-300 cursor-pointer"
+              class="w-40 h-20 flex items-center justify-center grayscale opacity-60 hover:grayscale-0 hover:opacity-100 hover:scale-105 transition-all duration-300 cursor-pointer bg-black backdrop-blur-sm"
             >
               <img
                 src="/assets/img/LOGO-ENCANTADO.png"
@@ -336,7 +337,7 @@
 
             <!-- Logo Card 2 -->
             <div
-              class="w-40 h-20 flex items-center justify-center grayscale opacity-60 hover:grayscale-0 hover:opacity-100 hover:scale-105 transition-all duration-300 cursor-pointer"
+              class="w-40 h-20 flex items-center justify-center grayscale opacity-60 hover:grayscale-0 hover:opacity-100 hover:scale-105 transition-all duration-300 cursor-pointer bg-black backdrop-blur-sm"
             >
               <img
                 src="/assets/img/LOGO-MOLETO.png"
@@ -347,7 +348,7 @@
 
             <!-- Logo Card 3 -->
             <div
-              class="w-40 h-20 flex items-center justify-center grayscale opacity-60 hover:grayscale-0 hover:opacity-100 hover:scale-105 transition-all duration-300 cursor-pointer"
+              class="w-40 h-20 flex items-center justify-center grayscale opacity-60 hover:grayscale-0 hover:opacity-100 hover:scale-105 transition-all duration-300 cursor-pointer bg-black backdrop-blur-sm"
             >
               <img
                 src="/assets/img/LOGO-ORIGEM.png"
@@ -358,7 +359,7 @@
 
             <!-- Logo Card 4 -->
             <div
-              class="w-40 h-20 flex items-center justify-center grayscale opacity-60 hover:grayscale-0 hover:opacity-100 hover:scale-105 transition-all duration-300 cursor-pointer"
+              class="w-40 h-20 flex items-center justify-center grayscale opacity-60 hover:grayscale-0 hover:opacity-100 hover:scale-105 transition-all duration-300 cursor-pointer bg-black backdrop-blur-sm"
             >
               <img
                 src="/assets/img/LOGO-POLLIUS.png"
@@ -367,7 +368,7 @@
               />
             </div>
             <div
-              class="w-40 h-20 flex items-center justify-center grayscale opacity-60 hover:grayscale-0 hover:opacity-100 hover:scale-105 transition-all duration-300 cursor-pointer"
+              class="w-40 h-20 flex items-center justify-center grayscale opacity-60 hover:grayscale-0 hover:opacity-100 hover:scale-105 transition-all duration-300 cursor-pointer bg-black backdrop-blur-sm"
             >
               <img
                 src="/assets/img/LOGO-ENCANTADO.png"
@@ -378,7 +379,7 @@
 
             <!-- Logo Card 2 -->
             <div
-              class="w-40 h-20 flex items-center justify-center grayscale opacity-60 hover:grayscale-0 hover:opacity-100 hover:scale-105 transition-all duration-300 cursor-pointer"
+              class="w-40 h-20 flex items-center justify-center grayscale opacity-60 hover:grayscale-0 hover:opacity-100 hover:scale-105 transition-all duration-300 cursor-pointer bg-black backdrop-blur-sm"
             >
               <img
                 src="/assets/img/LOGO-MOLETO.png"
@@ -389,7 +390,7 @@
 
             <!-- Logo Card 3 -->
             <div
-              class="w-40 h-20 flex items-center justify-center grayscale opacity-60 hover:grayscale-0 hover:opacity-100 hover:scale-105 transition-all duration-300 cursor-pointer"
+              class="w-40 h-20 flex items-center justify-center grayscale opacity-60 hover:grayscale-0 hover:opacity-100 hover:scale-105 transition-all duration-300 cursor-pointer bg-black backdrop-blur-sm"
             >
               <img
                 src="/assets/img/LOGO-ORIGEM.png"
@@ -400,7 +401,7 @@
 
             <!-- Logo Card 4 -->
             <div
-              class="w-40 h-20 flex items-center justify-center grayscale opacity-60 hover:grayscale-0 hover:opacity-100 hover:scale-105 transition-all duration-300 cursor-pointer"
+              class="w-40 h-20 flex items-center justify-center grayscale opacity-60 hover:grayscale-0 hover:opacity-100 hover:scale-105 transition-all duration-300 cursor-pointer bg-black backdrop-blur-sm"
             >
               <img
                 src="/assets/img/LOGO-POLLIUS.png"
@@ -409,7 +410,7 @@
               />
             </div>
             <div
-              class="w-40 h-20 flex items-center justify-center grayscale opacity-60 hover:grayscale-0 hover:opacity-100 hover:scale-105 transition-all duration-300 cursor-pointer"
+              class="w-40 h-20 flex items-center justify-center grayscale opacity-60 hover:grayscale-0 hover:opacity-100 hover:scale-105 transition-all duration-300 cursor-pointer bg-black backdrop-blur-sm"
             >
               <img
                 src="/assets/img/LOGO-ENCANTADO.png"
@@ -420,7 +421,7 @@
 
             <!-- Logo Card 2 -->
             <div
-              class="w-40 h-20 flex items-center justify-center grayscale opacity-60 hover:grayscale-0 hover:opacity-100 hover:scale-105 transition-all duration-300 cursor-pointer"
+              class="w-40 h-20 flex items-center justify-center grayscale opacity-60 hover:grayscale-0 hover:opacity-100 hover:scale-105 transition-all duration-300 cursor-pointer bg-black backdrop-blur-sm"
             >
               <img
                 src="/assets/img/LOGO-MOLETO.png"
@@ -431,7 +432,7 @@
 
             <!-- Logo Card 3 -->
             <div
-              class="w-40 h-20 flex items-center justify-center grayscale opacity-60 hover:grayscale-0 hover:opacity-100 hover:scale-105 transition-all duration-300 cursor-pointer"
+              class="w-40 h-20 flex items-center justify-center grayscale opacity-60 hover:grayscale-0 hover:opacity-100 hover:scale-105 transition-all duration-300 cursor-pointer bg-black backdrop-blur-sm"
             >
               <img
                 src="/assets/img/LOGO-ORIGEM.png"
@@ -442,7 +443,7 @@
 
             <!-- Logo Card 4 -->
             <div
-              class="w-40 h-20 flex items-center justify-center grayscale opacity-60 hover:grayscale-0 hover:opacity-100 hover:scale-105 transition-all duration-300 cursor-pointer"
+              class="w-40 h-20 flex items-center justify-center grayscale opacity-60 hover:grayscale-0 hover:opacity-100 hover:scale-105 transition-all duration-300 cursor-pointer bg-black backdrop-blur-sm"
             >
               <img
                 src="/assets/img/LOGO-POLLIUS.png"
@@ -462,8 +463,7 @@
       <div class="container mx-auto px-6 lg:px-12 max-w-7xl">
         <div class="text-center mb-16 reveal">
           <h2 class="text-3xl lg:text-4xl font-bold mb-4">
-            Negócios de alimentação que destravaram
-            crescimento.
+            Negócios de alimentação que destravaram crescimento.
           </h2>
         </div>
 
@@ -577,6 +577,92 @@
             "Olhar para os números, alinhar operação e só então ligar o fogo do
             marketing."
           </p>
+        </div>
+      </div>
+    </section>
+
+    <section
+      class="py-20 bg-dark-950 border-t border-dark-800 relative overflow-hidden"
+    >
+      <!-- Detalhe de fundo (glow) -->
+      <div
+        class="absolute right-0 top-1/2 -translate-y-1/2 w-96 h-96 bg-brand/5 rounded-full blur-3xl pointer-events-none"
+      ></div>
+
+      <div class="container mx-auto px-6 lg:px-12 max-w-6xl relative z-10">
+        <div class="grid md:grid-cols-2 gap-12 items-center">
+          <!-- Coluna de Texto -->
+          <div class="reveal">
+            <div
+              class="inline-flex items-center gap-2 px-3 py-1 rounded-full bg-brand/10 border border-brand/20 mb-6"
+            >
+              <span
+                class="text-xs font-bold text-brand uppercase tracking-wider"
+                >Metodologia Comprovada</span
+              >
+            </div>
+
+            <h2 class="text-3xl lg:text-4xl font-bold mb-6 leading-tight">
+              GFS + Certificação 8Ps: <br />
+              <span class="text-gray-400"
+                >Estratégia que gera resultado de verdade.</span
+              >
+            </h2>
+
+            <div class="space-y-6 text-gray-300 leading-relaxed">
+              <p>
+                Na <strong class="text-white">GFS</strong>, acreditamos que
+                marketing para hamburguerias, pizzarias e restaurantes precisa
+                ser feito com método, estratégia e profundidade.
+              </p>
+              <p>
+                Por isso, participamos da certificação oficial do método
+                <strong class="text-white">8Ps do Marketing Digital</strong>,
+                criado por
+                <span class="text-brand font-medium">Conrado Adolpho</span> — um
+                dos maiores nomes do marketing no Brasil, autor best-seller e
+                referência em alavancagem de negócios.
+              </p>
+            </div>
+          </div>
+
+          <!-- Coluna da Imagem (Conrado Adolpho) -->
+          <div
+            class="reveal delay-200 flex justify-center md:justify-end relative"
+          >
+            <!-- Moldura da Imagem -->
+            <div
+              class="relative w-full max-w-md aspect-[4/5] rounded-2xl overflow-hidden border border-dark-700 shadow-2xl group"
+            >
+              <!-- IMAGEM PLACEHOLDER (Trocar pela foto do Conrado) -->
+              <!-- Estou usando uma imagem genérica de "Speaker" como placeholder -->
+              <img
+                src="assets/img/CONRADO.webp"
+                alt="Conrado Adolpho - Método 8Ps"
+                class="absolute inset-0 w-full h-full object-cover"
+              />
+
+              <!-- Overlay gradiente para texto sobre a imagem -->
+              <div
+                class="absolute inset-0 bg-gradient-to-t from-dark-950 via-transparent to-transparent opacity-90"
+              ></div>
+
+              <!-- Legenda na imagem -->
+              <div class="absolute bottom-6 left-6 right-6">
+                <p class="text-white font-bold text-lg">Conrado Adolpho</p>
+                <p
+                  class="text-brand text-xs uppercase tracking-wide font-medium"
+                >
+                  Criador do Método 8Ps
+                </p>
+              </div>
+            </div>
+
+            <!-- Elemento decorativo atrás da imagem -->
+            <div
+              class="absolute -bottom-6 -right-6 w-full h-full border-2 border-brand/20 rounded-2xl -z-10 hidden md:block"
+            ></div>
+          </div>
         </div>
       </div>
     </section>
