--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
           <div class="flex items-center gap-6 px-3">
             <!-- Logo Card 1 -->
             <div
-              class="w-40 h-20 flex items-center justify-center grayscale opacity-60 hover:grayscale-0 hover:opacity-100 hover:scale-105 transition-all duration-300 cursor-pointer bg-black backdrop-blur-sm"
+              class="w-40 h-20 flex items-center justify-center opacity-60 bg-black backdrop-blur-sm rounded-lg border border-yellow-500/30"
             >
               <img
                 src="/assets/img/LOGO-ENCANTADO.png"
@@ -253,7 +253,7 @@
 
             <!-- Logo Card 2 -->
             <div
-              class="w-40 h-20 flex items-center justify-center grayscale opacity-60 hover:grayscale-0 hover:opacity-100 hover:scale-105 transition-all duration-300 cursor-pointer bg-black backdrop-blur-sm"
+              class="w-40 h-20 flex items-center justify-center opacity-60 bg-black backdrop-blur-sm rounded-lg border border-yellow-500/30"
             >
               <img
                 src="/assets/img/LOGO-MOLETO.png"
@@ -264,7 +264,7 @@
 
             <!-- Logo Card 3 -->
             <div
-              class="w-40 h-20 flex items-center justify-center grayscale opacity-60 hover:grayscale-0 hover:opacity-100 hover:scale-105 transition-all duration-300 cursor-pointer bg-black backdrop-blur-sm"
+              class="w-40 h-20 flex items-center justify-center opacity-60 bg-black backdrop-blur-sm rounded-lg border border-yellow-500/30"
             >
               <img
                 src="/assets/img/LOGO-ORIGEM.png"
@@ -275,7 +275,7 @@
 
             <!-- Logo Card 4 -->
             <div
-              class="w-40 h-20 flex items-center justify-center grayscale opacity-60 hover:grayscale-0 hover:opacity-100 hover:scale-105 transition-all duration-300 cursor-pointer bg-black backdrop-blur-sm"
+              class="w-40 h-20 flex items-center justify-center opacity-60 bg-black backdrop-blur-sm rounded-lg border border-yellow-500/30"
             >
               <img
                 src="/assets/img/LOGO-POLLIUS.png"
@@ -284,7 +284,7 @@
               />
             </div>
             <div
-              class="w-40 h-20 flex items-center justify-center grayscale opacity-60 hover:grayscale-0 hover:opacity-100 hover:scale-105 transition-all duration-300 cursor-pointer bg-black backdrop-blur-sm"
+              class="w-40 h-20 flex items-center justify-center opacity-60 bg-black backdrop-blur-sm rounded-lg border border-yellow-500/30"
             >
               <img
                 src="/assets/img/LOGO-ENCANTADO.png"
@@ -295,7 +295,7 @@
 
             <!-- Logo Card 2 -->
             <div
-              class="w-40 h-20 flex items-center justify-center grayscale opacity-60 hover:grayscale-0 hover:opacity-100 hover:scale-105 transition-all duration-300 cursor-pointer bg-black backdrop-blur-sm"
+              class="w-40 h-20 flex items-center justify-center opacity-60 bg-black backdrop-blur-sm rounded-lg border border-yellow-500/30"
             >
               <img
                 src="/assets/img/LOGO-MOLETO.png"
@@ -306,7 +306,7 @@
 
             <!-- Logo Card 3 -->
             <div
-              class="w-40 h-20 flex items-center justify-center grayscale opacity-60 hover:grayscale-0 hover:opacity-100 hover:scale-105 transition-all duration-300 cursor-pointer bg-black backdrop-blur-sm"
+              class="w-40 h-20 flex items-center justify-center opacity-60 bg-black backdrop-blur-sm rounded-lg border border-yellow-500/30"
             >
               <img
                 src="/assets/img/LOGO-ORIGEM.png"
@@ -317,7 +317,7 @@
 
             <!-- Logo Card 4 -->
             <div
-              class="w-40 h-20 flex items-center justify-center grayscale opacity-60 hover:grayscale-0 hover:opacity-100 hover:scale-105 transition-all duration-300 cursor-pointer bg-black backdrop-blur-sm"
+              class="w-40 h-20 flex items-center justify-center opacity-60 bg-black backdrop-blur-sm rounded-lg border border-yellow-500/30"
             >
               <img
                 src="/assets/img/LOGO-POLLIUS.png"
@@ -326,7 +326,7 @@
               />
             </div>
             <div
-              class="w-40 h-20 flex items-center justify-center grayscale opacity-60 hover:grayscale-0 hover:opacity-100 hover:scale-105 transition-all duration-300 cursor-pointer bg-black backdrop-blur-sm"
+              class="w-40 h-20 flex items-center justify-center opacity-60 bg-black backdrop-blur-sm rounded-lg border border-yellow-500/30"
             >
               <img
                 src="/assets/img/LOGO-ENCANTADO.png"
@@ -337,7 +337,7 @@
 
             <!-- Logo Card 2 -->
             <div
-              class="w-40 h-20 flex items-center justify-center grayscale opacity-60 hover:grayscale-0 hover:opacity-100 hover:scale-105 transition-all duration-300 cursor-pointer bg-black backdrop-blur-sm"
+              class="w-40 h-20 flex items-center justify-center opacity-60 bg-black backdrop-blur-sm rounded-lg border border-yellow-500/30"
             >
               <img
                 src="/assets/img/LOGO-MOLETO.png"
@@ -348,7 +348,7 @@
 
             <!-- Logo Card 3 -->
             <div
-              class="w-40 h-20 flex items-center justify-center grayscale opacity-60 hover:grayscale-0 hover:opacity-100 hover:scale-105 transition-all duration-300 cursor-pointer bg-black backdrop-blur-sm"
+              class="w-40 h-20 flex items-center justify-center opacity-60 bg-black backdrop-blur-sm rounded-lg border border-yellow-500/30"
             >
               <img
                 src="/assets/img/LOGO-ORIGEM.png"
@@ -359,7 +359,7 @@
 
             <!-- Logo Card 4 -->
             <div
-              class="w-40 h-20 flex items-center justify-center grayscale opacity-60 hover:grayscale-0 hover:opacity-100 hover:scale-105 transition-all duration-300 cursor-pointer bg-black backdrop-blur-sm"
+              class="w-40 h-20 flex items-center justify-center opacity-60 bg-black backdrop-blur-sm rounded-lg border border-yellow-500/30"
             >
               <img
                 src="/assets/img/LOGO-POLLIUS.png"
@@ -368,7 +368,7 @@
               />
             </div>
             <div
-              class="w-40 h-20 flex items-center justify-center grayscale opacity-60 hover:grayscale-0 hover:opacity-100 hover:scale-105 transition-all duration-300 cursor-pointer bg-black backdrop-blur-sm"
+              class="w-40 h-20 flex items-center justify-center opacity-60 bg-black backdrop-blur-sm rounded-lg border border-yellow-500/30"
             >
               <img
                 src="/assets/img/LOGO-ENCANTADO.png"
@@ -379,7 +379,7 @@
 
             <!-- Logo Card 2 -->
             <div
-              class="w-40 h-20 flex items-center justify-center grayscale opacity-60 hover:grayscale-0 hover:opacity-100 hover:scale-105 transition-all duration-300 cursor-pointer bg-black backdrop-blur-sm"
+              class="w-40 h-20 flex items-center justify-center opacity-60 bg-black backdrop-blur-sm rounded-lg border border-yellow-500/30"
             >
               <img
                 src="/assets/img/LOGO-MOLETO.png"
@@ -390,7 +390,7 @@
 
             <!-- Logo Card 3 -->
             <div
-              class="w-40 h-20 flex items-center justify-center grayscale opacity-60 hover:grayscale-0 hover:opacity-100 hover:scale-105 transition-all duration-300 cursor-pointer bg-black backdrop-blur-sm"
+              class="w-40 h-20 flex items-center justify-center opacity-60 bg-black backdrop-blur-sm rounded-lg border border-yellow-500/30"
             >
               <img
                 src="/assets/img/LOGO-ORIGEM.png"
@@ -401,7 +401,7 @@
 
             <!-- Logo Card 4 -->
             <div
-              class="w-40 h-20 flex items-center justify-center grayscale opacity-60 hover:grayscale-0 hover:opacity-100 hover:scale-105 transition-all duration-300 cursor-pointer bg-black backdrop-blur-sm"
+              class="w-40 h-20 flex items-center justify-center opacity-60 bg-black backdrop-blur-sm rounded-lg border border-yellow-500/30"
             >
               <img
                 src="/assets/img/LOGO-POLLIUS.png"
@@ -410,7 +410,7 @@
               />
             </div>
             <div
-              class="w-40 h-20 flex items-center justify-center grayscale opacity-60 hover:grayscale-0 hover:opacity-100 hover:scale-105 transition-all duration-300 cursor-pointer bg-black backdrop-blur-sm"
+              class="w-40 h-20 flex items-center justify-center opacity-60 bg-black backdrop-blur-sm rounded-lg border border-yellow-500/30"
             >
               <img
                 src="/assets/img/LOGO-ENCANTADO.png"
@@ -421,7 +421,7 @@
 
             <!-- Logo Card 2 -->
             <div
-              class="w-40 h-20 flex items-center justify-center grayscale opacity-60 hover:grayscale-0 hover:opacity-100 hover:scale-105 transition-all duration-300 cursor-pointer bg-black backdrop-blur-sm"
+              class="w-40 h-20 flex items-center justify-center opacity-60 bg-black backdrop-blur-sm rounded-lg border border-yellow-500/30"
             >
               <img
                 src="/assets/img/LOGO-MOLETO.png"
@@ -432,7 +432,7 @@
 
             <!-- Logo Card 3 -->
             <div
-              class="w-40 h-20 flex items-center justify-center grayscale opacity-60 hover:grayscale-0 hover:opacity-100 hover:scale-105 transition-all duration-300 cursor-pointer bg-black backdrop-blur-sm"
+              class="w-40 h-20 flex items-center justify-center opacity-60 bg-black backdrop-blur-sm rounded-lg border border-yellow-500/30"
             >
               <img
                 src="/assets/img/LOGO-ORIGEM.png"
@@ -443,7 +443,7 @@
 
             <!-- Logo Card 4 -->
             <div
-              class="w-40 h-20 flex items-center justify-center grayscale opacity-60 hover:grayscale-0 hover:opacity-100 hover:scale-105 transition-all duration-300 cursor-pointer bg-black backdrop-blur-sm"
+              class="w-40 h-20 flex items-center justify-center opacity-60 bg-black backdrop-blur-sm rounded-lg border border-yellow-500/30"
             >
               <img
                 src="/assets/img/LOGO-POLLIUS.png"
