--- a/index.html
+++ b/index.html
@@ -478,7 +478,7 @@
                 class="absolute inset-0 bg-black/40 group-hover:bg-transparent transition-colors z-10"
               ></div>
               <img
-                src="https://images.unsplash.com/photo-1544025162-d76694265947?q=80&w=2069&auto=format&fit=crop"
+                src="assets/img/CASE_1.png"
                 alt="Churrascaria"
                 class="w-full h-full object-cover transform group-hover:scale-110 transition-transform duration-700"
               />
@@ -492,7 +492,7 @@
               <h3
                 class="text-xl font-bold mb-4 text-white group-hover:text-brand transition-colors"
               >
-                Faturamento previsível
+                Churrascaria Encantado
               </h3>
               <p class="text-gray-400 text-sm leading-relaxed">
                 Uma churrascaria com movimento concentrado apenas em sábado e
@@ -512,7 +512,7 @@
                 class="absolute inset-0 bg-black/40 group-hover:bg-transparent transition-colors z-10"
               ></div>
               <img
-                src="https://images.unsplash.com/photo-1568901346375-23c9450c58cd?q=80&w=1998&auto=format&fit=crop"
+                src="assets/img/CASE_2.png"
                 alt="Hamburgueria"
                 class="w-full h-full object-cover transform group-hover:scale-110 transition-transform duration-700"
               />
@@ -526,7 +526,7 @@
               <h3
                 class="text-xl font-bold mb-4 text-white group-hover:text-brand transition-colors"
               >
-                Seguidores em clientes
+                Origem Burger
               </h3>
               <p class="text-gray-400 text-sm leading-relaxed">
                 Uma hamburgueria com presença forte nas redes sociais, mas pouco
@@ -546,27 +546,27 @@
                 class="absolute inset-0 bg-black/40 group-hover:bg-transparent transition-colors z-10"
               ></div>
               <img
-                src="https://images.unsplash.com/photo-1559339352-11d035aa65de?q=80&w=1974&auto=format&fit=crop"
+                src="assets/img/CASE_3.png"
                 alt="Restaurante à la carte"
                 class="w-full h-full object-cover transform group-hover:scale-110 transition-transform duration-700"
               />
               <div
                 class="absolute top-4 left-4 z-20 bg-black/70 backdrop-blur px-3 py-1 rounded text-xs font-bold text-brand uppercase"
               >
-                À la carte
+                Hamburgueria
               </div>
             </div>
             <div class="p-8">
               <h3
                 class="text-xl font-bold mb-4 text-white group-hover:text-brand transition-colors"
               >
-                Margem ajustada
+                Moleto
               </h3>
               <p class="text-gray-400 text-sm leading-relaxed">
-                Um restaurante com bom movimento não tinha clareza de margem por
-                prato. Entramos nos números e no menu; depois, afinamos o
-                marketing para empurrar os pratos mais lucrativos. Crescimento
-                baseado em lucro.
+                A hamburgueria era vista, curtida, comentada. Mas não lucrava.
+                Com a OFIR, ela encontrou clareza: produtos que realmente dão
+                margem, comunicação que atrai quem valoriza o que ela entrega e
+                um negócio que finalmente respira.
               </p>
             </div>
           </div>
